Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
 
   <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://nigelm.github.io/images/og-featured.png"/>
+<meta name="twitter:image" content="https://blog.dotdot.cloud/images/og-featured.png"/>
 
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="I&rsquo;m a sysadmin-come-software-engineer who escaped from the world of pseudo-hardware many years back (used to do VLSI design). I&rsquo;ve been involved with free software for many years, with linux for more than 15, and mail systems for a similar length of time&hellip;. and I also stage manage for a local theatre, which can give an odd mix."/>
